[package]
name = "maptile_cacher"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
moka = { version = "0.12", features = ["future"] }
memmap2 = "0.9"
bytes = "1.9"
dashmap = "6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
thiserror = "2.0"
anyhow = "1.0"
